product, user 앱 수정

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.log
 *.pot
 *.pyc
+*.swp
 __pycache__/
 local_settings.py
 db.sqlite3
@@ -13,6 +14,8 @@ db.sqlite3-journal
 media
 my_settings.py
 *.csv
+*.zip
+db_uploader.py
 
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
